- refractor(gateway): remove api key and token null check